# woa7015-medvqa

./: .gitignore  README.md  main.py  pyproject.toml
checkpoints/blip_lora/: history.json  test_results.json
checkpoints/blip_lora_50e_bs96_r16_h100/: history.json  test_results.json
checkpoints/blip_lora_50e_bs96_r32_h100/: history.json  test_results.json
checkpoints/blip_lora_50e_bs96_r8_h100/: history.json  test_results.json
checkpoints/cnn_lstm_frozen/: history.json  test_results.json
checkpoints/cnn_lstm_unfrozen/: history.json  test_results.json
data/: README.md
docs/submission/prelim/: prelim_presentation.pptx
notebooks/: 01_prelim.ipynb  02_eda.ipynb  03_model_train.ipynb  04_model_eval.ipynb  05_blip_compare_panel.ipynb  prelim.ipynb
src/woa7015_medvqa/: __init__.py
src/woa7015_medvqa/dataset/: tokenizer.py  vocab.py
src/woa7015_medvqa/v1/dataset/: collate_fn.py  slake_dataset.py
src/woa7015_medvqa/v1/models/: resnet_lstm.py
src/woa7015_medvqa/v2/: utils.py
src/woa7015_medvqa/v2/data/: collate.py  slake.py  tokenizers.py  transforms.py
src/woa7015_medvqa/v2/eval/: __init__.py  evaluate_blip.py  evaluate_cnn_lstm.py  metrics.py
src/woa7015_medvqa/v2/models/: __init__.py  blip_lora.py  cnn_lstm.py
src/woa7015_medvqa/v2/train/: __init__.py  train_blip.py  train_cnn_lstm.py
