[project]
name = "woa7015-medvqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "rich>=14.2.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
cpu = ["torch>=2.9.0", "torchvision>=0.24.0"]
cu130 = ["torch>=2.9.0", "torchvision>=0.24.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
